--- a/frontend/src/components/Profile/style.css
+++ b/frontend/src/components/Profile/style.css
@@ -32,8 +32,8 @@
   font-weight: bold;
   border-radius: 5px;
   position: absolute;
+  top: -5%;
   right: 2%;
-  bottom: 2%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -107,6 +107,7 @@
   align-items: center;
   justify-content: space-between;
   position: absolute;
+  width: 1310px;
   top: 55%;
   left: 12%;
 }
@@ -116,6 +117,8 @@
   align-items: center;
   gap: 2rem;
   font-size: 1rem;
+  width: 750px;
+  word-break: break-all;
 }
 
 .profile {
@@ -198,6 +201,7 @@
 .mid-container {
   margin-top: 1rem;
   flex: 5;
+
   display: flex;
   position: relative;
 }
@@ -206,17 +210,20 @@
 }
 
 .mid-left {
-  flex: 1.6;
-  width: 600px;
+  width: 700px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .mid-right {
-  flex: 2.5;
-  margin: 10px 20px 20px 20px;
+  margin-top: 10px;
+  position: relative;
+  width: 750px;
 }
 
 .left {
-  width: 100%;
+  width: 550px;
   background-color: #fff;
   border-radius: 8px;
   margin: 20px;
@@ -243,6 +250,7 @@
   align-self: center;
   padding: 0;
   font-size: 1.2rem;
+  word-break: break-all;
 }
 
 .info-icon {
@@ -355,8 +363,10 @@ textarea::-webkit-scrollbar {
 
 .friendlist {
   display: grid;
-  grid-template-columns: repeat(3, auto);
+  grid-template-columns: repeat(3, 192px);
   width: 100%;
+  padding-top: 20px;
+  /* padding-bottom: 10px; */
 }
 
 .friend-left-header {
@@ -391,6 +401,8 @@ textarea::-webkit-scrollbar {
   font-size: 0.9rem;
   background-color: transparent;
   width: 120px;
+  word-break: break-all;
+  margin: 0;
   color: black;
 }
 
@@ -449,8 +461,8 @@ textarea::-webkit-scrollbar {
 
 .follow-profile {
   width: 8rem;
-  position: absolute;
-  right: -280%;
+  /* position: absolute;
+  right: -200%; */
   color: black;
   margin: 0 10px;
   background-color: rgba(63, 63, 63, 0.204);
@@ -474,8 +486,6 @@ textarea::-webkit-scrollbar {
 .blue {
   background-color: #2374e1;
   width: 8rem;
-  position: absolute;
-  right: -280%;
   margin: 0 10px;
 }
 
@@ -509,4 +519,12 @@ textarea::-webkit-scrollbar {
   box-shadow: 0 1px 5px rgba(84, 84, 84, 0.822);
   z-index: 2;
   border-radius: 8px;
+}
+.profileUser {
+  top: 10%;
+}
+
+.userProfile {
+  margin: 0;
+  margin-top: 2rem;
 }
