--- a/frontend/src/components/Profile/style.css
+++ b/frontend/src/components/Profile/style.css
@@ -363,10 +363,9 @@ textarea::-webkit-scrollbar {
 
 .friendlist {
   display: grid;
-  grid-template-columns: repeat(3, 192px);
+  grid-template-columns: repeat(3, 182px);
   width: 100%;
   padding-top: 20px;
-  /* padding-bottom: 10px; */
 }
 
 .friend-left-header {
@@ -403,6 +402,7 @@ textarea::-webkit-scrollbar {
   width: 120px;
   word-break: break-all;
   margin: 0;
+  padding: 10px;
   color: black;
 }
 
@@ -525,6 +525,9 @@ textarea::-webkit-scrollbar {
 }
 
 .userProfile {
-  margin: 0;
-  margin-top: 2rem;
+  width: 510px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem auto;
 }
